Fix pages cards

--- a/ednatalia.html
+++ b/ednatalia.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -62,62 +62,65 @@
 		</header>
 
 		<div class="box">
-		<!-- Main -->
-		<section id="main" class="container">
-			<header>
-				<h2>Ed Natalia</h2>
-				<p>A generic page for every non-generic situation.</p>
-			</header>
-			<div class="card border-light mb-3" style="max-width: auto;">
-				<div class="row g-0 reverse">
-					<div class="col-md-6">
-						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg" class="card-img img-fluid rounded" alt=""/></a>
-					</div>
-					<div class="col-md-6">
-						<div class="card-body">
-							<h5 class="card-title">Ed Natalia</h5>
-							<p class="card-text" style="text-align: justify;">
-								This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-							</p>
-							<p class="card-text" style="text-align: justify;">
-								This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-							</p>
+			<!-- Main -->
+			<section id="main" class="container">
+				<header>
+					<h2>Ed Natalia</h2>
+					<p>A generic page for every non-generic situation.</p>
+				</header>
+				<div class="card border-light mb-3" style="max-width: auto;">
+					<div class="row g-0 reverse">
+						<div class="col-md-6">
+							<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg"
+									class="card-img img-fluid rounded" alt="" /></a>
+						</div>
+						<div class="col-md-6">
+							<div class="card-body">
+								<h5 class="card-title">Ed Natalia</h5>
+								<p class="card-text" style="text-align: justify;">
+									This is a wider card with supporting text below as a natural lead-in to additional content. This
+									content is a little bit longer.
+								</p>
+								<p class="card-text" style="text-align: justify;">
+									This is a wider card with supporting text below as a natural lead-in to additional content. This
+									content is a little bit longer.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="card testimonials">
-					<div class="card-body">
-						<div class="testimonial">
-							<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
-							<div class="author-content"></div>
-							<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="card testimonials">
+						<div class="card-body">
+							<div class="testimonial">
+								<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
+								<div class="author-content"></div>
+								<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
+							</div>
+							<div class="testimonial">
+								<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
+								<div class="author-content"></div>
+								<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
+							</div>
+
 						</div>
-						<div class="testimonial">
-							<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
-							<div class="author-content"></div>
-							<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
-						</div> 
-			
 					</div>
 				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="card w-75">
-					<div class="card-body">
-						<div id="authorNames">
-							<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
+				<div class="col-sm-6">
+					<div class="card w-75">
+						<div class="card-body">
+							<div id="authorNames">
+								<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
+		<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="copyright">
