--- a/index.html
+++ b/index.html
@@ -92,109 +92,38 @@
 				</div>
 				<!-- END CAROUSEL -->
 			</section>
-		</div>
+		
 
 		<!-- Main -->
-		<!-- START TESTIMONIALS-CAROUSEL -->
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="card testimonials">
-					<div class="card-body">
-						<div class="testimonial">
-							<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
-							<div class="author-content"></div>
-							<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
+		
+			<section id="main" class="container">
+				<header>
+					<h2>Bem Vindo</h2>
+					<p>A generic page for every non-generic situation.</p>
+				</header>
+				<div class="card border-light mb-3" style="max-width: auto;">
+					<div class="row g-0 reverse">
+						<div class="col-md-6">
+							<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg"
+									class="card-img img-fluid rounded" alt="" /></a>
 						</div>
-						<div class="testimonial">
-							<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
-							<div class="author-content"></div>
-							<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
-						</div> 
-			
+						<div class="col-md-6">
+							<div class="card-body">
+								<h5 class="card-title">Bem vindo</h5>
+								<p class="card-text" style="text-align: justify;">
+									This is a wider card with supporting text below as a natural lead-in to additional content. This
+									content is a little bit longer.
+								</p>
+								<p class="card-text" style="text-align: justify;">
+									This is a wider card with supporting text below as a natural lead-in to additional content. This
+									content is a little bit longer.
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="card w-75">
-					<div class="card-body">
-						<div id="authorNames">
-							<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
-						</div>
-					</div>
-				</div>
-			</div>
+			</section>
 		</div>
-		
-		<!-- <div class="testimonial-container">
-			<div class="testimonial">
-				<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
-				<div class="author-content"></div>
-				<p class="author">John Doe</p>
-			</div>
-
-			<div class="testimonial">
-				<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
-				<div class="author-content"></div>
-				<p class="author">Jane Doe</p>
-			</div> -->
-			<!-- <img src="images/pic01.jpg" alt="John Doe Image" class="author-image"> 
-		</div> -->
-		<!-- <div id="authorContainer" class="col-6">
-
-		</div> -->
-		
-
-
-		<!-- END TESTIMONIALS-CAROUSEL -->
-
-
-
-		<section class="box special features">
-
-			<div class="box">
-				<span class="image featured"><img src="images/Painted-Skies.jpg" alt="" /></span>
-				<h3>This is a subheading</h3>
-				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-					non
-					blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet
-					interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit.
-					Ante
-					accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan
-					tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan
-					adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis
-					praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu
-					aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa
-					arcu.
-				</p>
-				<div class="row">
-					<div class="row-6 row-12-mobilep">
-						<h3>And now a subheading</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
-							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
-							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio
-							vis
-							praesent.</p>
-					</div>
-					<div class="row-6 row-12-mobilep">
-						<h3>And another subheading</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc
-							integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim
-							laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio
-							vis
-							praesent.</p>
-					</div>
-				</div>
-			</div>
-			<!-- <div class="features-row">
-				<section>
-					<img src="/assets/images/Painted-Skies.jpg" alt="">
-					<span class="icon solid major fa-bolt accent2"></span>
-					<h3>Magna etiam</h3>
-					<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-						iaculis accumsan dolore magna aliquam veroeros.</p>
-				</section>
-			</div> -->
-		</section>
 		<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 
 		<!-- Footer -->
