--- a/saintJames.html
+++ b/saintJames.html
@@ -62,23 +62,65 @@
 		</header>
 
 		<!-- Main -->
-		<section id="main" class="container">
-			<header>
-				<h2>Saint James</h2>
-				<p>A generic page for every non-generic situation.</p>
-			</header>
-			<div class="flex-box">
-				<div class="box">
-					<span class="image featured"><a href="images/saintJames.jpg" target="_blank"><img
-						src="images/saintJames.jpg" alt="" /></a></span>
-					<h3>Fachada Saint James</h3>
-					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-						non
-						blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-					</p>
+		<div class="box">
+			<!-- Main -->
+			<section id="main" class="container">
+				<header>
+					<h2>Saint James</h2>
+					<p>A generic page for every non-generic situation.</p>
+				</header>
+				<div class="card border-light mb-3" style="max-width: auto;">
+					<div class="row g-0 reverse">
+						<div class="col-md-6">
+							<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg"
+									class="card-img img-fluid rounded" alt="" /></a>
+						</div>
+						<div class="col-md-6">
+							<div class="card-body">
+								<h5 class="card-title">Saint James</h5>
+								<p class="card-text" style="text-align: justify;">
+									This is a wider card with supporting text below as a natural lead-in to additional content. This
+									content is a little bit longer.
+								</p>
+								<p class="card-text" style="text-align: justify;">
+									This is a wider card with supporting text below as a natural lead-in to additional content. This
+									content is a little bit longer.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+	
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="card testimonials">
+						<div class="card-body">
+							<div class="testimonial">
+								<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
+								<div class="author-content"></div>
+								<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
+							</div>
+							<div class="testimonial">
+								<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
+								<div class="author-content"></div>
+								<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
+							</div>
+	
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="card w-75">
+						<div class="card-body">
+							<div id="authorNames">
+								<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 		<!-- Footer -->
 		<footer id="footer">
