--- a/sobrenos.html
+++ b/sobrenos.html
@@ -64,23 +64,35 @@
 	</header>
 
 	<!-- Main -->
-	<section id="main" class="container">
-		<header>
-			<h2>Quem somos</h2>
-			<p>A generic page for every non-generic situation.</p>
-		</header>
-		<div class="flex-box">
-			<div class="box">
-				<span class="image featured"><a href="images/saintJames.jpg" target="_blank"><img src="images/saintJames.jpg"
-							alt="" /></a></span>
-				<h3>Fachada Saint James</h3>
-				<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis
-					non
-					blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent.
-				</p>
+	<div class="box">
+		<section id="main" class="container">
+			<header>
+				<h2>Sobre Nos</h2>
+				<p>A generic page for every non-generic situation.</p>
+			</header>
+			<div class="card border-light mb-3" style="max-width: auto;">
+				<div class="row g-0 reverse">
+					<div class="col-md-6">
+						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg" class="card-img img-fluid rounded"
+								alt="" /></a>
+					</div>
+					<div class="col-md-6">
+						<div class="card-body">
+							<h5 class="card-title">Sobre nos</h5>
+							<p class="card-text" style="text-align: justify;">
+								This is a wider card with supporting text below as a natural lead-in to additional content. This
+								content is a little bit longer.
+							</p>
+							<p class="card-text" style="text-align: justify;">
+								This is a wider card with supporting text below as a natural lead-in to additional content. This
+								content is a little bit longer.
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</div>
 	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
 	<!-- Footer -->
 	<footer id="footer">
