--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		
 			<section id="main" class="container">
 				<header>
-					<h2>Bem Vindo</h2>
+					<h2>Bem Vindo a Tecbos</h2>
 					<p>A generic page for every non-generic situation.</p>
 				</header>
 				<div class="card border-light mb-3" style="max-width: auto;">
