Fix title welcome

--- a/index.html
+++ b/index.html
@@ -92,15 +92,12 @@
 				</div>
 				<!-- END CAROUSEL -->
 			</section>
-		
-
-		<!-- Main -->
-		
+				
 			<section id="main" class="container">
-				<header>
+				<div class="mt-4">
 					<h2>Bem Vindo a Tecbos</h2>
 					<p>A generic page for every non-generic situation.</p>
-				</header>
+				</div>
 				<div class="card border-light mb-3" style="max-width: auto;">
 					<div class="row g-0 reverse">
 						<div class="col-md-6">
