Added text about us

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -67,7 +67,7 @@
 	<div class="box">
 		<section id="main" class="container">
 			<header>
-				<h2>Sobre Nos</h2>
+				<h2>Quem Somos</h2>
 				<p>A generic page for every non-generic situation.</p>
 			</header>
 			<div class="card border-light mb-3" style="max-width: auto;">
@@ -78,14 +78,19 @@
 					</div>
 					<div class="col-md-6">
 						<div class="card-body">
-							<h5 class="card-title">Sobre nos</h5>
+							<h5 class="card-title">Quem Somos Nós</h5>
 							<p class="card-text" style="text-align: justify;">
-								This is a wider card with supporting text below as a natural lead-in to additional content. This
-								content is a little bit longer.
+								Vinda de uma tradição familiar com mais de 70 anos no ramo imobiliário,
+								e de uma empresa embrionária cujo primeiro edifício foi lançado em 1984,
+								a Tecbos Empreendimentos Imobiliários nasceu em 1992 com o objetivo de dar continuidade ao legado
+								imobiliário familiar na cidade de São Paulo.
 							</p>
 							<p class="card-text" style="text-align: justify;">
-								This is a wider card with supporting text below as a natural lead-in to additional content. This
-								content is a little bit longer.
+								Ao longo de nossos 30+ anos, participamos no desenvolvimento de empreendimentos no interior do Estado e
+								na capital Paulista,
+								acumulando um total de X negócios em nosso portfólio.
+								Hoje, a Tecbos atua na incorporação e administração de imóveis na cidade de São Paulo, e em Montreal, no
+								Canadá.
 							</p>
 						</div>
 					</div>
