Translate Pt En pages

--- a/ednataliaEn.html
+++ b/ednataliaEn.html
@@ -21,113 +21,120 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<!-- <div class="logo"> -->
+			<!-- <div class="logo">
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>-->
 			<nav class="nav" id="nav">
-
-				<ul class="nav justify-content-center">
+				<ul>
 					<li>
-						<a href="index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+						<a href="indexEn.html"><img class="logo-img" src="images/logo.png" alt=""></a>
 					</li>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+					<li><a href="indexEn.html">HOME</a></li>
+					<li><a href="sobrenosEn.html">ABOUT US </a></li>
 					<li>
-						<a href="#">PORTFÓLIO</a>
+						<a href="#">PORTFOLIO</a>
 						<ul>
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">BREVE LANÇAMENTO</a>
+						<a href="#">COMING SOON</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">EM CONSTRUCAO</a>
+						<a href="#">UNDER CONSTRUCTION</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#"><i class="fa-solid fa-globe"></i></a>
+						<ul>
+							<li><a href="index.html">Pt</a></li>
+							<li><a href="indexEn.html">En</a></li>
 						</ul>
 					</li>
 				</ul>
 			</nav>
-			<!-- </div> -->
 		</header>
+	</div>
 
-		<div class="box">
-			<!-- Main -->
-			<section id="main" class="container">
-				<header>
-					<h2>Ed Natalia</h2>
-					<p>A generic page for every non-generic situation.</p>
-				</header>
-				<div class="card border-light mb-3" style="max-width: auto;">
-					<div class="row g-0 reverse">
-						<div class="col-md-6">
-							<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg"
-									class="card-img img-fluid rounded" alt="" /></a>
-						</div>
-						<div class="col-md-6">
-							<div class="card-body">
-								<h5 class="card-title">Ed Natalia</h5>
-								<p class="card-text" style="text-align: justify;">
-									This is a wider card with supporting text below as a natural lead-in to additional content. This
-									content is a little bit longer.
-								</p>
-								<p class="card-text" style="text-align: justify;">
-									This is a wider card with supporting text below as a natural lead-in to additional content. This
-									content is a little bit longer.
-								</p>
-							</div>
+	<div class="box">
+		<!-- Main -->
+		<section id="main" class="container">
+			<header>
+				<h2>Ed Natalia</h2>
+				<p>A generic page for every non-generic situation.</p>
+			</header>
+			<div class="card border-light mb-3" style="max-width: auto;">
+				<div class="row g-0 reverse">
+					<div class="col-md-6">
+						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg" class="card-img img-fluid rounded"
+								alt="" /></a>
+					</div>
+					<div class="col-md-6">
+						<div class="card-body">
+							<h5 class="card-title">Ed Natalia</h5>
+							<p class="card-text" style="text-align: justify;">
+								This is a wider card with supporting text below as a natural lead-in to additional content. This
+								content is a little bit longer.
+							</p>
+							<p class="card-text" style="text-align: justify;">
+								This is a wider card with supporting text below as a natural lead-in to additional content. This
+								content is a little bit longer.
+							</p>
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="card testimonials">
-						<div class="card-body">
-							<div class="testimonial">
-								<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
-								<div class="author-content"></div>
-								<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
-							</div>
-							<div class="testimonial">
-								<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
-								<div class="author-content"></div>
-								<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
-							</div>
-
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="card testimonials">
+					<div class="card-body">
+						<div class="testimonial">
+							<img src="images/background-binary-code.jpg" alt="John Doe Image" class="author-image">
+							<div class="author-content"></div>
+							<p class="author">John Doe, Lorem, ipsum dolor sit amet</p>
 						</div>
+						<div class="testimonial">
+							<img src="images/background_horizontal.jpeg" alt="John Doe Image" class="author-image">
+							<div class="author-content"></div>
+							<p class="author">Jane Doe Lorem, ipsum dolor sit amet</p>
+						</div>
+
 					</div>
 				</div>
-				<div class="col-sm-6">
-					<div class="card w-75">
-						<div class="card-body">
-							<div id="authorNames">
-								<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
-							</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="card w-75">
+					<div class="card-body">
+						<div id="authorNames">
+							<!-- Nomes dos autores serão adicionados aqui dinamicamente -->
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
-		<!-- Footer -->
-		<footer id="footer">
-			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="">GWS Tech</a></li>
-			</ul>
-		</footer>
+	</div>
+	<button id="btnScrollToTop" onclick="scrollToTop()" title="Top"><i class="fa-solid fa-arrow-up"></i></button>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy; Untitled. All rights reserved.</li>
+			<li>Design: <a href="">GWS Tech</a></li>
+		</ul>
+	</footer>
 
 	</div>
 
