--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 							<li><a href="saintJames.html">Saint James</a></li>
 						</ul>
 					</li>
+					<li>
+						<a href="#"><i class="fa-solid fa-globe"></i></a>
+						<ul>
+							<li><a href="index.html">Pt</a></li>
+							<li><a href="indexEn.html">En</a></li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
 			<!-- </div> -->
@@ -92,7 +99,7 @@
 				</div>
 				<!-- END CAROUSEL -->
 			</section>
-				
+
 			<section id="main" class="container">
 				<div class="mt-4">
 					<h2>Bem Vindo a Tecbos</h2>
