--- a/sobrenos.html
+++ b/sobrenos.html
@@ -58,6 +58,13 @@
 							<li><a href="saintJames.html">Saint James</a></li>
 						</ul>
 					</li>
+					<li>
+						<a href="#"><i class="fa-solid fa-globe"></i></a>
+						<ul>
+							<li><a href="index.html">Pt</a></li>
+							<li><a href="indexEn.html">En</a></li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
 	</div>
