--- a/sobrenosEn.html
+++ b/sobrenosEn.html
@@ -23,45 +23,51 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<!-- <div class="logo">
-				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>
- -->
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>-->
 			<nav class="nav" id="nav">
 				<ul>
 					<li>
-						<a href="index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+						<a href="indexEn.html"><img class="logo-img" src="images/logo.png" alt=""></a>
 					</li>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="sobrenos.html">ABOUT US </a></li>
+					<li><a href="indexEn.html">HOME</a></li>
+					<li><a href="sobrenosEn.html">ABOUT US </a></li>
 					<li>
 						<a href="#">PORTFOLIO</a>
 						<ul>
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
 						<a href="#">COMING SOON</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
 						<a href="#">UNDER CONSTRUCTION</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#"><i class="fa-solid fa-globe"></i></a>
+						<ul>
+							<li><a href="index.html">Pt</a></li>
+							<li><a href="indexEn.html">En</a></li>
 						</ul>
 					</li>
 				</ul>
 			</nav>
+		</header>
 	</div>
-	</header>
 
 	<!-- Main -->
 	<div class="box">
