--- a/indexEn.html
+++ b/indexEn.html
@@ -21,42 +21,50 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
+			<!-- <div class="logo">
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>-->
 			<nav class="nav" id="nav">
-				<ul class="nav justify-content-center">
+				<ul>
 					<li>
-						<a href="index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+						<a href="indexEn.html"><img class="logo-img" src="images/logo.png" alt=""></a>
 					</li>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+					<li><a href="indexEn.html">HOME</a></li>
+					<li><a href="sobrenosEn.html">ABOUT US </a></li>
 					<li>
-						<a href="#">PORTFÓLIO</a>
+						<a href="#">PORTFOLIO</a>
 						<ul>
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">BREVE LANÇAMENTO</a>
+						<a href="#">COMING SOON</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">EM CONSTRUCAO</a>
+						<a href="#">UNDER CONSTRUCTION</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#"><i class="fa-solid fa-globe"></i></a>
+						<ul>
+							<li><a href="index.html">Pt</a></li>
+							<li><a href="indexEn.html">En</a></li>
 						</ul>
 					</li>
 				</ul>
 			</nav>
-			<!-- </div> -->
 		</header>
 
 
@@ -92,10 +100,10 @@
 				</div>
 				<!-- END CAROUSEL -->
 			</section>
-				
+
 			<section id="main" class="container">
 				<div class="mt-4">
-					<h2>Bem Vindo a Tecbos</h2>
+					<h2>Welcome to Tecbos</h2>
 					<p>A generic page for every non-generic situation.</p>
 				</div>
 				<div class="card border-light mb-3" style="max-width: auto;">
@@ -106,7 +114,7 @@
 						</div>
 						<div class="col-md-6">
 							<div class="card-body">
-								<h5 class="card-title">Bem vindo</h5>
+								<h5 class="card-title">Welcome</h5>
 								<p class="card-text" style="text-align: justify;">
 									This is a wider card with supporting text below as a natural lead-in to additional content. This
 									content is a little bit longer.
