--- a/resSerraAltaEn.html
+++ b/resSerraAltaEn.html
@@ -21,43 +21,52 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
+			<!-- <div class="logo">
+				<h1><a href="/index.html"><img class="logo-img" src="images/logo.png" alt=""></a></h1>-->
 			<nav class="nav" id="nav">
 				<ul>
 					<li>
-						<a href="index.html"><img class="logo-img" src="images/logo.png" alt=""></a>
+						<a href="indexEn.html"><img class="logo-img" src="images/logo.png" alt=""></a>
 					</li>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="sobrenos.html">SOBRE NÓS </a></li>
+					<li><a href="indexEn.html">HOME</a></li>
+					<li><a href="sobrenosEn.html">ABOUT US </a></li>
 					<li>
-						<a href="#">PORTFÓLIO</a>
+						<a href="#">PORTFOLIO</a>
 						<ul>
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">BREVE LANÇAMENTO</a>
+						<a href="#">COMING SOON</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">EM CONSTRUCAO</a>
+						<a href="#">UNDER CONSTRUCTION</a>
 						<ul>
 							<!-- <li><a href="index.html">Home</a></li> -->
-							<li><a href="ednatalia.html">Ed Natalia</a></li>
-							<li><a href="resSerraAlta.html">Res. Serra Alta</a></li>
-							<li><a href="saintJames.html">Saint James</a></li>
+							<li><a href="ednataliaEn.html">Ed Natalia</a></li>
+							<li><a href="resSerraAltaEn.html">Res. Serra Alta</a></li>
+							<li><a href="saintJamesEn.html">Saint James</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#"><i class="fa-solid fa-globe"></i></a>
+						<ul>
+							<li><a href="index.html">Pt</a></li>
+							<li><a href="indexEn.html">En</a></li>
 						</ul>
 					</li>
 				</ul>
 			</nav>
+		</header>
 	</div>
-	</header>
 
 	<!-- Main -->
 	<div class="box">
@@ -70,8 +79,8 @@
 			<div class="card border-light mb-3" style="max-width: auto;">
 				<div class="row g-0 reverse">
 					<div class="col-md-6">
-						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg"
-								class="card-img img-fluid rounded" alt="" /></a>
+						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg" class="card-img img-fluid rounded"
+								alt="" /></a>
 					</div>
 					<div class="col-md-6">
 						<div class="card-body">
