Align image itens inside cards

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<p>A generic page for every non-generic situation.</p>
 				</div>
 				<div class="card border-light mb-3" style="max-width: auto;">
-					<div class="row g-0 reverse">
+					<div class="row g-0 reverse align-items-center">
 						<div class="col-md-6">
 							<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg"
 									class="card-img img-fluid rounded" alt="" /></a>
