--- a/sobrenos.html
+++ b/sobrenos.html
@@ -78,14 +78,14 @@
 				<p>A generic page for every non-generic situation.</p>
 			</header>
 			<div class="card border-light mb-3" style="max-width: auto;">
-				<div class="row g-0 reverse">
+				<div class="row g-0 reverse align-items-center">
 					<div class="col-md-6">
 						<a href="images/alta-1.jpg" target="_blank"><img src="images/alta-1.jpg" class="card-img img-fluid rounded"
 								alt="" /></a>
 					</div>
 					<div class="col-md-6">
 						<div class="card-body">
-							<h5 class="card-title">Quem Somos Nós</h5>
+							<h3 class="card-title">Quem Somos Nós</h3>
 							<p class="card-text" style="text-align: justify;">
 								Vinda de uma tradição familiar com mais de 70 anos no ramo imobiliário,
 								e de uma empresa embrionária cujo primeiro edifício foi lançado em 1984,
