Fix container class for the in the card

--- a/sobrenosEn.html
+++ b/sobrenosEn.html
@@ -71,7 +71,7 @@
 
 	<!-- Main -->
 	<div class="box">
-		<section id="main" class="container">
+		<section id="main" class="container p-4">
 			<header>
 				<h2>About us</h2>
 				<p>A generic page for every non-generic situation.</p>
