--- a/ednataliaEn.html
+++ b/ednataliaEn.html
@@ -70,7 +70,7 @@
 
 	<div class="box">
 		<!-- Main -->
-		<section id="main" class="container">
+		<section id="main" class="container p-4">
 			<header>
 				<h2>Ed Natalia</h2>
 				<p>A generic page for every non-generic situation.</p>
