--- a/sobrenos.html
+++ b/sobrenos.html
@@ -72,7 +72,7 @@
 
 	<!-- Main -->
 	<div class="box">
-		<section id="main" class="container">
+		<section id="main" class="container p-4">
 			<header>
 				<h2>Quem Somos</h2>
 				<p>A generic page for every non-generic situation.</p>
